# arco-rights-mcp

./: .gitignore  LICENSE  LICENSE_COMMERCIAL  README.md  arco_mcp_server.py  pyproject.toml
src/arco_mcp/: __init__.py  cli.py  engine.py  escalation.py  guards.py  law.py  server.py  types.py
tests/: test_engine.py
